# mcp-fin-analyst

./: README.md
fin-analyst/: AAPL_investment_report_2025-07-31.md  AMZN_investment_report.md  GOOGL_investment_report.md  META_investment_report.md  META_investment_report_2025-07-31.md  NVDA_investment_report.md  TSLA_investment_report.md  env  finance_crew.py  main.py  pyproject.toml  server.py  stock_analysis.py  valuation_calculator.py  valuation_crew.py
