[project]
name = "fin-analyst"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.130.0",
    "crewai-tools>=0.47.1",
    "matplotlib>=3.10.3",
    "mcp>=1.9.4",
    "ollama>=0.5.1",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "yfinance>=0.2.63",
]
